--- a/dkms.conf
+++ b/dkms.conf
@@ -1,5 +1,5 @@
-PACKAGE_NAME="@_PKGBASE@"
-PACKAGE_VERSION="@PKGVER@"
+PACKAGE_NAME="i915-sriov-dkms"
+PACKAGE_VERSION="6.8.4-2"
 
 MAKE[0]="make -j$(nproc) -C ${kernel_source_dir} M=${dkms_tree}/${PACKAGE_NAME}/${PACKAGE_VERSION}/build KVER=${kernelver}"
 CLEAN="make -j$(nproc) -C ${kernel_source_dir} M=${dkms_tree}/${PACKAGE_NAME}/${PACKAGE_VERSION}/build KVER=${kernelver} clean"
@@ -8,4 +8,4 @@ BUILT_MODULE_NAME[0]="i915"
 DEST_MODULE_LOCATION[0]=/kernel/drivers/gpu/drm/i915
 
 AUTOINSTALL=yes
-BUILD_EXCLUSIVE_KERNEL="^(6\.[1-7]\.)"
+BUILD_EXCLUSIVE_KERNEL="^(6\.[1-9]\.)"
